test/libsolidity/syntaxTests/metaTypes/typeNotRegularIdentifierParameter.sol
contract Test {
    function f(uint type) public pure {
    }
}
// ----
// ParserError: (36-40): Expected ',' but got 'type'
